[package]
name = "linehaul"
version = "0.1.0"
authors = ["Donald Stufft <donald@stufft.io>"]
edition = "2018"


[dependencies]
lambda_runtime = "0.1"
aws_lambda_events = "0.2.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
log = "0.4"
simple_logger = "1"
rusoto_core = "0.36.0"
rusoto_s3 = "0.36.0"
openssl = { version = "0.10", features = ["vendored"] }
flate2 = "1.0"
nom = "4.1"
num-traits = "0.2"
num-derive = "0.2"
chrono = "0.4"
backoff = "0.1.2"
regex = "1"
lazy_static = "1.2.0"

[profile.release]
lto = true
overflow-checks = true
