[package]
name = "linehaul"
version = "0.1.0"
authors = ["Donald Stufft <donald@stufft.io>"]
edition = "2018"
build = "build.rs"

[build-dependencies]
built = "0.3"

[dependencies]
aws_lambda_events = "0.2.1"
backoff = "0.1.2"
base64 = "0.10.1"
chrono = "0.4"
clap = "2.32.0"
erased-serde = "0.3"
flate2 = "1.0"
hyper = "^0.10"
hyper-native-tls = "0.3.0"
itertools = "0.8.0"
lambda_runtime = "0.1"
lazy_static = "1.2.0"
nom = "4.1"
num-derive = "0.2"
num-traits = "0.2"
openssl = { version = "0.10", features = ["vendored"] }
regex = "1"
rusoto_core = "0.36.0"
rusoto_s3 = "0.36.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
slog = { version = "2.4.1", features = ["max_level_trace", "release_max_level_info"] }
slog-async = "2.3.0"
slog-bunyan = "2.1.0"
slog-envlogger = "2.1.0"
slog-scope = "4.1.1"
slog-term = "2.4.0"
url = "1.7.2"
uuid = { version = "0.7", features = ["serde", "v4"] }
yup-oauth2 = "^1.0"

[profile.release]
lto = true
overflow-checks = true
